[package]
name = "pleme-auth-tokens"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "pleme-auth-tokens library"
repository = "https://github.com/pleme-io/pleme-auth-tokens"
homepage = "https://github.com/pleme-io/pleme-auth-tokens"
readme = "README.md"

[dependencies]
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
thiserror = "2.0.9"
base64 = "0.22.1"
pleme-rbac = { git = "https://github.com/pleme-io/pleme-rbac" }


